NS3_common_includes()

set(name core)
set(lib${name} ns${NS3_VER}-${name}-${build_type})
add_library(${lib${name}} SHARED
        model/abort.h
        model/assert.h
        model/attribute.cc
        model/attribute.h
        model/attribute-accessor-helper.h
        model/attribute-construction-list.cc
        model/attribute-construction-list.h
        model/attribute-helper.h
        model/boolean.cc
        model/boolean.h
        model/breakpoint.cc
        model/breakpoint.h
        model/build-profile.h
        #model/cairo-wideint.c
        #model/cairo-wideint-private.h
        model/calendar-scheduler.cc
        model/calendar-scheduler.h
        model/callback.cc
        model/callback.h
        model/command-line.cc
        model/command-line.h
        model/config.cc
        model/config.h
        model/default-deleter.h
        model/default-simulator-impl.cc
        model/default-simulator-impl.h
        model/deprecated.h
        model/des-metrics.cc
        model/des-metrics.h
        model/double.cc
        model/double.h
        model/empty.h
        model/enum.cc
        model/enum.h
        model/event-id.cc
        model/event-id.h
        model/event-impl.cc
        model/event-impl.h
        model/fatal-error.h
        model/fatal-impl.cc
        model/fatal-impl.h
        model/global-value.cc
        model/global-value.h
        model/hash.cc
        model/hash.h
        model/hash-fnv.cc
        model/hash-fnv.h
        model/hash-function.cc
        model/hash-function.h
        model/hash-murmur3.cc
        model/hash-murmur3.h
        model/heap-scheduler.cc
        model/heap-scheduler.h
        model/int64x64.cc
        model/int64x64.h
        model/int64x64-128.cc
        model/int64x64-128.h
        #model/int64x64-cairo.cc
        #model/int64x64-cairo.h
        model/int64x64-double.h
        model/int-to-type.h
        model/integer.cc
        model/integer.h
        model/list-scheduler.cc
        model/list-scheduler.h
        model/log.cc
        model/log.h
        model/log-macros-disabled.h
        model/log-macros-enabled.h
        model/make-event.cc
        model/make-event.h
        model/map-scheduler.cc
        model/map-scheduler.h
        model/math.h
        model/names.cc
        model/names.h
        model/non-copyable.h
        model/nstime.h
        model/object.cc
        model/object.h
        model/object-base.cc
        model/object-base.h
        model/object-factory.cc
        model/object-factory.h
        model/object-map.h
        model/object-ptr-container.cc
        model/object-ptr-container.h
        model/object-vector.h
        model/pointer.cc
        model/pointer.h
        model/ptr.h
        model/random-variable-stream.cc
        model/random-variable-stream.h
        model/realtime-simulator-impl.cc
        model/realtime-simulator-impl.h
        model/ref-count-base.cc
        model/ref-count-base.h
        model/rng-seed-manager.cc
        model/rng-seed-manager.h
        model/rng-stream.cc
        model/rng-stream.h
        model/scheduler.cc
        model/scheduler.h
        model/simple-ref-count.h
        model/simulation-singleton.h
        model/simulator.cc
        model/simulator.h
        model/simulator-impl.cc
        model/simulator-impl.h
        model/singleton.h
        model/string.cc
        model/string.h
        model/synchronizer.cc
        model/synchronizer.h
        model/system-condition.h
        model/system-mutex.h
        model/system-path.cc
        model/system-path.h
        model/system-thread.cc
        model/system-thread.h
        model/system-wall-clock-ms.h
        model/test.cc
        model/test.h
        model/time.cc
        model/timer.cc
        model/timer.h
        model/timer-impl.h
        model/trace-source-accessor.cc
        model/trace-source-accessor.h
        model/traced-callback.h
        model/traced-value.h
        model/type-id.cc
        model/type-id.h
        model/type-name.cc
        model/type-name.h
        model/type-traits.h
        model/uinteger.cc
        model/uinteger.h
        model/unix-fd-reader.cc
        model/unix-fd-reader.h
        model/unix-system-condition.cc
        model/unix-system-mutex.cc
        model/unix-system-wall-clock-ms.cc
        model/unused.h
        model/valgrind.h
        model/vector.cc
        model/vector.h
        model/wall-clock-synchronizer.cc
        model/wall-clock-synchronizer.h
        model/watchdog.cc
        model/watchdog.h
        #model/win32-system-wall-clock-ms.cc
        helper/event-garbage-collector.cc
        helper/event-garbage-collector.h
        helper/random-variable-stream-helper.cc
        helper/random-variable-stream-helper.h
        )

set(test${name} ns${NS3_VER}-${name}-test-${build_type})
add_library(${test${name}} SHARED
        test/attribute-test-suite.cc
        test/build-profile-test-suite.cc
        test/callback-test-suite.cc
        test/command-line-test-suite.cc
        test/config-test-suite.cc
        test/event-garbage-collector-test-suite.cc
        test/global-value-test-suite.cc
        test/hash-test-suite.cc
        test/int64x64-test-suite.cc
        test/many-uniform-random-variables-one-get-value-call-test-suite.cc
        test/names-test-suite.cc
        test/object-test-suite.cc
        test/one-uniform-random-variable-many-get-value-calls-test-suite.cc
        test/ptr-test-suite.cc
        test/random-variable-stream-test-suite.cc
        test/rng-test-suite.cc
        test/sample-test-suite.cc
        test/simulator-test-suite.cc
        test/threaded-test-suite.cc
        test/time-test-suite.cc
        test/timer-test-suite.cc
        test/traced-callback-test-suite.cc
        test/type-id-test-suite.cc
        test/watchdog-test-suite.cc
        )

