NS3_common_includes()

set(name internet)
set(lib${name} ns${NS3_VER}-${name}-${build_type})
add_library(${lib${name}} SHARED
        model/arp-cache.cc
        model/arp-cache.h
        model/arp-header.cc
        model/arp-header.h
        model/arp-l3-protocol.cc
        model/arp-l3-protocol.h
        model/candidate-queue.cc
        model/candidate-queue.h
        model/global-route-manager.cc
        model/global-route-manager.h
        model/global-route-manager-impl.cc
        model/global-route-manager-impl.h
        model/global-router-interface.cc
        model/global-router-interface.h
        model/global-routing.h
        model/icmpv4.cc
        model/icmpv4.h
        model/icmpv4-l4-protocol.cc
        model/icmpv4-l4-protocol.h
        model/icmpv6-header.cc
        model/icmpv6-header.h
        model/icmpv6-l4-protocol.cc
        model/icmpv6-l4-protocol.h
        model/ip-l4-protocol.cc
        model/ip-l4-protocol.h
        model/ipv4.cc
        model/ipv4.h
        model/ipv4-address-generator.cc
        model/ipv4-address-generator.h
        model/ipv4-end-point.cc
        model/ipv4-end-point.h
        model/ipv4-end-point-demux.cc
        model/ipv4-end-point-demux.h
        model/ipv4-global-routing.cc
        model/ipv4-global-routing.h
        model/ipv4-header.cc
        model/ipv4-header.h
        model/ipv4-interface.cc
        model/ipv4-interface.h
        model/ipv4-interface-address.cc
        model/ipv4-interface-address.h
        model/ipv4-l3-protocol.cc
        model/ipv4-l3-protocol.h
        model/ipv4-list-routing.cc
        model/ipv4-list-routing.h
        model/ipv4-packet-filter.cc
        model/ipv4-packet-filter.h
        model/ipv4-packet-info-tag.cc
        model/ipv4-packet-info-tag.h
        model/ipv4-packet-probe.cc
        model/ipv4-packet-probe.cc
        model/ipv4-queue-disc-item.cc
        model/ipv4-queue-disc-item.h
        model/ipv4-raw-socket-factory.cc
        model/ipv4-raw-socket-factory.h
        model/ipv4-raw-socket-factory-impl.cc
        model/ipv4-raw-socket-factory-impl.h
        model/ipv4-raw-socket-impl.cc
        model/ipv4-raw-socket-impl.h
        model/ipv4-route.cc
        model/ipv4-route.h
        model/ipv4-routing-protocol.cc
        model/ipv4-routing-protocol.h
        model/ipv4-routing-table-entry.cc
        model/ipv4-routing-table-entry.h
        model/ipv4-static-routing.cc
        model/ipv4-static-routing.h
        model/ipv6.cc
        model/ipv6.h
        model/ipv6-address-generator.cc
        model/ipv6-address-generator.h
        model/ipv6-autoconfigured-prefix.cc
        model/ipv6-autoconfigured-prefix.h
        model/ipv6-end-point.cc
        model/ipv6-end-point.h
        model/ipv6-end-point-demux.cc
        model/ipv6-end-point-demux.h
        model/ipv6-extension.cc
        model/ipv6-extension.h
        model/ipv6-extension-demux.cc
        model/ipv6-extension-demux.h
        model/ipv6-extension-header.cc
        model/ipv6-extension-header.h
        model/ipv6-header.cc
        model/ipv6-header.h
        model/ipv6-interface.cc
        model/ipv6-interface.h
        model/ipv6-interface-address.cc
        model/ipv6-interface-address.h
        model/ipv6-l3-protocol.cc
        model/ipv6-l3-protocol.h
        model/ipv6-list-routing.cc
        model/ipv6-list-routing.h
        model/ipv6-option.cc
        model/ipv6-option.h
        model/ipv6-option-demux.cc
        model/ipv6-option-demux.h
        model/ipv6-option-header.cc
        model/ipv6-option-header.h
        model/ipv6-packet-filter.cc
        model/ipv6-packet-filter.h
        model/ipv6-packet-info-tag.cc
        model/ipv6-packet-info-tag.h
        model/ipv6-packet-probe.cc
        model/ipv6-packet-probe.cc
        model/ipv6-pmtu-cache.cc
        model/ipv6-pmtu-cache.h
        model/ipv6-queue-disc-item.cc
        model/ipv6-queue-disc-item.h
        model/ipv6-raw-socket-factory.cc
        model/ipv6-raw-socket-factory.h
        model/ipv6-raw-socket-factory-impl.cc
        model/ipv6-raw-socket-factory-impl.h
        model/ipv6-raw-socket-impl.cc
        model/ipv6-raw-socket-impl.h
        model/ipv6-route.cc
        model/ipv6-route.h
        model/ipv6-routing-protocol.cc
        model/ipv6-routing-protocol.h
        model/ipv6-routing-table-entry.cc
        model/ipv6-routing-table-entry.h
        model/ipv6-static-routing.cc
        model/ipv6-static-routing.h
        model/loopback-net-device.cc
        model/loopback-net-device.h
        model/ndisc-cache.cc
        model/ndisc-cache.h
        model/nsc-sysctl.cc
        model/nsc-sysctl.h
        model/nsc-tcp-l4-protocol.cc
        model/nsc-tcp-l4-protocol.h
        model/nsc-tcp-socket-factory-impl.cc
        model/nsc-tcp-socket-factory-impl.h
        model/nsc-tcp-socket-impl.cc
        model/nsc-tcp-socket-impl.h
        model/pending-data.cc
        model/pending-data.h
        model/rip.cc
        model/rip.h
        model/rip-header.cc
        model/rip-header.h
        model/ripng.cc
        model/ripng.h
        model/ripng-header.cc
        model/ripng-header.h
        model/rtt-estimator.cc
        model/rtt-estimator.h
        model/sim_errno.h
        model/sim_interface.h
        model/tcp-bic.cc
        model/tcp-bic.h
        model/tcp-congestion-ops.cc
        model/tcp-congestion-ops.h
        model/tcp-header.h
        model/tcp-highspeed.cc
        model/tcp-highspeed.h
        model/tcp-htcp.cc
        model/tcp-htcp.h
        model/tcp-hybla.cc
        model/tcp-hybla.h
        model/tcp-illinois.cc
        model/tcp-illinois.h
        model/tcp-l4-protocol.cc
        model/tcp-l4-protocol.h
        model/tcp-option.cc
        model/tcp-option.h
        model/tcp-option-rfc793.cc
        model/tcp-option-rfc793.h
        model/tcp-option-ts.cc
        model/tcp-option-ts.h
        model/tcp-option-winscale.cc
        model/tcp-option-winscale.h
        model/tcp-rx-buffer.cc
        model/tcp-rx-buffer.h
        model/tcp-scalable.cc
        model/tcp-scalable.h
        model/tcp-socket.cc
        model/tcp-socket.h
        model/tcp-socket-base.cc
        model/tcp-socket-base.h
        model/tcp-socket-factory.cc
        model/tcp-socket-factory.h
        model/tcp-socket-factory-impl.cc
        model/tcp-socket-factory-impl.h
        model/tcp-tx-buffer.cc
        model/tcp-tx-buffer.h
        model/tcp-vegas.cc
        model/tcp-vegas.h
        model/tcp-veno.cc
        model/tcp-veno.h
        model/tcp-westwood.cc
        model/tcp-westwood.h
        model/tcp-yeah.cc
        model/tcp-yeah.h
        model/udp-header.cc
        model/udp-header.h
        model/udp-l4-protocol.cc
        model/udp-l4-protocol.h
        model/udp-socket.cc
        model/udp-socket.h
        model/udp-socket-factory.cc
        model/udp-socket-factory.h
        model/udp-socket-factory-impl.cc
        model/udp-socket-factory-impl.h
        model/udp-socket-impl.cc
        model/udp-socket-impl.h
        helper/internet-stack-helper.cc
        helper/internet-stack-helper.h
        helper/internet-trace-helper.cc
        helper/internet-trace-helper.h
        helper/ipv4-address-helper.cc
        helper/ipv4-address-helper.h
        helper/ipv4-global-routing-helper.cc
        helper/ipv4-global-routing-helper.h
        helper/ipv4-interface-container.cc
        helper/ipv4-interface-container.h
        helper/ipv4-list-routing-helper.cc
        helper/ipv4-list-routing-helper.h
        helper/ipv4-routing-helper.cc
        helper/ipv4-routing-helper.h
        helper/ipv4-static-routing-helper.cc
        helper/ipv4-static-routing-helper.h
        helper/ipv6-address-helper.cc
        helper/ipv6-address-helper.h
        helper/ipv6-interface-container.cc
        helper/ipv6-interface-container.h
        helper/ipv6-list-routing-helper.cc
        helper/ipv6-list-routing-helper.h
        helper/ipv6-routing-helper.cc
        helper/ipv6-routing-helper.h
        helper/ipv6-static-routing-helper.cc
        helper/ipv6-static-routing-helper.h
        helper/rip-helper.cc
        helper/rip-helper.h
        helper/ripng-helper.cc
        helper/ripng-helper.cc


        )

#set(test${name} ns${NS3_VER}-${name}-test-${build_type})
#add_library(${test${name}} SHARED )
